# Group-42

./: docker-compose.yml  makefile  server.dockerfile
client/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
client/shared/: Cargo.toml
client/shared/src/: lib.rs
client/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client/src-tauri/src/: lib.rs  main.rs
client/src/components/: ChatScreen.tsx  FileMessageList.tsx  LogIn.tsx  OnlineUsers.tsx  Register.tsx  hooks.ts  types.ts
client/src/platform/: crypto.ts  db.ts  handleSend.ts  index.ts  privkey_decrypt.ts  privkey_encrypt.ts  publicChannelSend.ts  sendFileDM.ts  sendFilePublicChannel.ts  setChatsWithFiles.ts  tauri.ts  web.ts
client/tests/: db.test.ts  web.test.ts
secure_chat/: Cargo.toml  README.md
secure_chat/src/: constants.rs  crypto.rs  id.rs  lib.rs
server/: Cargo.toml  README.md  config.yaml
server/src/: bootstrap.rs  config.rs  constants.rs  errors.rs  heartbeat.rs  lib.rs  log.rs  main.rs  network_utils.rs  transport.rs
server/src/handlers/: direct_message.rs  file_transfer_chunk.rs  file_transfer_end.rs  file_transfer_start.rs  heartbeat.rs  list_users.rs  mod.rs  public_channel_add.rs  public_channel_key_share.rs  public_channel_message.rs  public_channel_updated.rs  server_announce.rs  server_deliver.rs  server_hello_join.rs  server_welcome.rs  user_advertise.rs  user_hello.rs  user_login.rs  user_register.rs  user_remove.rs
server/src/messages/: mod.rs
server/tests/: health_check.rs
test/: Cargo.toml  README.md  generate_keys.rs  test-cli  test_cli.py
test/configs/: server1_config.yaml  server2_config.yaml  server3_config.yaml
test/keys/: server1_private_key.pem  server1_pubkey.txt  server1_public_key.pem  server2_private_key.pem  server2_pubkey.txt  server2_public_key.pem  server3_private_key.pem  server3_pubkey.txt  server3_public_key.pem
