# GROUP: 42
# MEMBERS: Ray Okamoto, Phoenix Pereira, Kayla Rowley, Qi Wu, Ho Yin Li

[package]
name = "secure_chat"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
base64 = "0.22"
chrono = { version = "0.4.42", features = ["serde"] }
rand = "0.8.5"
rsa = { version = "0.9.8", features = ["pem", "sha2"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_with = { version = "3.14.0", features = ["base64"] }
sha2 = "0.10.9"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
reqwest = "0.12.23"
tempfile = "3.22.0"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 2
