# GROUP: 42
# MEMBERS: Ray Okamoto, Phoenix Pereira, Kayla Rowley, Qi Wu, Ho Yin Li

[package]
name = "test_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
rsa = "0.9"
secure_chat = { path = "../secure_chat" }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "generate_keys"
path = "generate_keys.rs"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 2
